# PreferredSoundPlayer

./: LICENSE  README.md  preferredsoundplayer.py  setup.cfg
preferredsoundplayer/: preferredsoundplayer.py
src/preferredsound/: preferredsoundplayer.py
src/preferredsoundplayer/: preferredsoundplayer.py
src/preferredwave/: preferredwaveplayer.py
