[metadata]
name = preferredsoundplayer
version = 0.0.4
author = Gary Davenport
author_email = dovedweller@gmail.com
description = I wanted a dependable sound player which is easy to implement, so I made and prefer this one.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/garydavenport73/PreferredSoundPlayer
project_urls = 
	Bug Tracker = https://github.com/garydavenport73/PreferredSoundPlayer/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

